# Simple-Allocator

./: .gitignore  CMakeLists.txt  README.md
Example/: CMakeLists.txt
Example/src/: main.cpp
SimpleAllocator/: CMakeLists.txt
SimpleAllocator/include/: SimpleAllocator.h
SimpleAllocator/src/: SimpleAllocator.cpp
